[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "five mathy brain games"
authors = ["Nick <muyyzdali@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/n1ckdevops/python-project-49"




[tool.poetry.dependencies]
python = ">=3.8"
prompt = "^0.4.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = 'brain_games.scripts.brain_prime:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


